Align to center login page so that buttons remain fixed at the center even when screen is smaller

--- a/game/app/assets/stylesheets/login.css
+++ b/game/app/assets/stylesheets/login.css
@@ -2,11 +2,3 @@
     text-align: center;
     margin-top: 4%;
 }
-
-.login-submit-button {
-    margin-right: 12%;
-}
-
-.login-back-button {
-    margin-right: 12%;
-}
